Revert "Update main branch"

--- a/config.yaml
+++ b/config.yaml
@@ -26,8 +26,12 @@ ext_tuttlebot:
   - events
   - help
   - bot
+  - tuttlebot.user
+  - tuttlebot.ai
 
 ext_neoturtle:
   - events
   - help
   - bot
+  - neoturtle.play
+  - neoturtle.account
